--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
   </head>
-  <body style='background-color:#41426d; display:flex; flex-direction: column; align-items: center; justify-content: center;'>
-    <div id="root" style='margin: 50px auto 50px;'></div>
+  <body style='background-color:#41426d;'>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
